force-app/main/default/objects/Opportunity/fields/Segmento_del_Grupo_Familiar__c.field-meta.xml
<CustomField>
    <fullName>Segmento_del_Grupo_Familiar__c</fullName>
    <label>Segmento del Grupo Familiar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VOLDIR</fullName>
            </value>
            <value>
                <fullName>OBLDIR</fullName>
            </value>
            <value>
                <fullName>VOLEMP</fullName>
            </value>
            <value>
                <fullName>OBLEMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>