force-app/main/default/objects/Opportunity/fields/Sin_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Sin_cotizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sin cotizacion</label>
    <type>Checkbox</type>
</CustomField>