force-app/main/default/objects/Opportunity/fields/Solicitar_carga_manual__c.field-meta.xml
<CustomField>
    <fullName>Solicitar_carga_manual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este check se utiliza para que el vendedor active una alerta de correo al organizador de la oportunidad solicitando habilitar la caga manual de documentos DDJJ y solicitud de ingreso</description>
    <label>Solicitar carga manual</label>
    <type>Checkbox</type>
</CustomField>