force-app/main/default/objects/Opportunity/fields/Solicitud_de_alta__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_alta__c</fullName>
    <description>Este campo se utiliza para pasar a check el valor del campo Tipo_de_solicitud__c. Este campo se utilizar en las plantillas de Docusign. NO BORRAR, NO MODIFICAR</description>
    <formula>ISPICKVAL(Tipo_de_Solicitud__c,&quot;ALTA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitud de alta</label>
    <type>Checkbox</type>
</CustomField>