force-app/main/default/objects/Opportunity/fields/Subestado_de_DDJJ__c.field-meta.xml
<CustomField>
    <fullName>Subestado_de_DDJJ__c</fullName>
    <label>Subestado de DDJJ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DDJJ OK</fullName>
            </value>
            <value>
                <fullName>AUDITORIA</fullName>
                <label>AUDITORÍA</label>
            </value>
            <value>
                <fullName>RECHAZADA</fullName>
            </value>
            <value>
                <fullName>FIRMA O.S.</fullName>
            </value>
            <value>
                <fullName>NUEVA</fullName>
            </value>
            <value>
                <fullName>PEDIDO ESTUDIO</fullName>
            </value>
            <value>
                <fullName>CADUCA</fullName>
            </value>
            <value>
                <fullName>ASESORADA</fullName>
            </value>
            <value>
                <fullName>LEGALES</fullName>
            </value>
            <value>
                <fullName>VALORIZAR</fullName>
            </value>
            <value>
                <fullName>APROBADA C/PREEX.</fullName>
            </value>
            <value>
                <fullName>CD ENVIADA</fullName>
            </value>
            <value>
                <fullName>TRASPASO</fullName>
            </value>
            <value>
                <fullName>EN REVISION</fullName>
                <label>EN REVISIÓN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>