force-app/main/default/objects/Opportunity/fields/Tarjeta_de_credito__c.field-meta.xml
<CustomField>
    <fullName>Tarjeta_de_credito__c</fullName>
    <label>Tarjeta de crédito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRO02</fullName>
                <label>VISA</label>
            </value>
            <value>
                <fullName>TRO03</fullName>
                <label>AMERICAN EXPRESS</label>
            </value>
            <value>
                <fullName>TRO04</fullName>
                <label>MASTERCARD</label>
            </value>
            <value>
                <fullName>TRO08</fullName>
                <label>TARJETA NARANJA</label>
            </value>
            <value>
                <fullName>TRO09</fullName>
                <label>TARJETA MARCOS JUAREZ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>