force-app/main/default/objects/Opportunity/fields/TC__c.field-meta.xml
<CustomField>
    <fullName>TC__c</fullName>
    <description>Este campo sirve para cuando el valor del campo medio de cobro es &quot;Tarjeta&quot; marca verdadero, este campo se utiliza para el envio de plantillas de Docusign. NO BORRAR</description>
    <formula>ISPICKVAL(Medio_de_cobro__c,&quot;Tarjeta&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TC</label>
    <type>Checkbox</type>
</CustomField>