force-app/main/default/objects/Opportunity/fields/Telefono_old__c.field-meta.xml
<CustomField>
    <fullName>Telefono_old__c</fullName>
    <formula>Cuenta_Personal__r.Phone</formula>
    <label>Teléfono_old</label>
    <type>Text</type>
</CustomField>