force-app/main/default/objects/Opportunity/fields/Tipo_CBU__c.field-meta.xml
<CustomField>
    <fullName>Tipo_CBU__c</fullName>
    <label>Tipo CBU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBUFR</fullName>
                <label>Debito CBU Bco Frances</label>
            </value>
            <value>
                <fullName>CBURO</fullName>
                <isActive>false</isActive>
                <label>Débito CBU Bco Rosario</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>