force-app/main/default/objects/Opportunity/fields/Tipo_contacto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_contacto__c</fullName>
    <label>Tipo contacto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individuo</fullName>
            </value>
            <value>
                <fullName>Grupo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>