force-app/main/default/objects/Opportunity/fields/Tipo_de_mercado__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_mercado__c</fullName>
    <label>Tipo de mercado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Canal Corporativo</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>La segunda</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Gestión compartida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>