force-app/main/default/objects/Opportunity/fields/Tipo_de_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Solicitud__c</fullName>
    <label>Tipo de Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALTA</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>REINGRESO</fullName>
                <label>Reingreso</label>
            </value>
            <value>
                <fullName>REING_GFAM</fullName>
                <label>Reingreso Grupo Familiar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>