force-app/main/default/objects/Opportunity/fields/Tipo_de_Telefono__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Telefono__c</fullName>
    <label>Tipo de Teléfono</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Telefono</valueSetName>
    </valueSet>
</CustomField>