force-app/main/default/objects/Opportunity/fields/Tipo_y_numero_documento_docusign__c.field-meta.xml
<CustomField>
    <fullName>Tipo_y_numero_documento_docusign__c</fullName>
    <description>Este campo se utiliza para unir tipo y numero de documento para el envió de plantillas con Docusign, NO BORRAR</description>
    <formula>TEXT(Tipo_de_Documento__c)&amp; &quot;-&quot; &amp;Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo y numero documento docusign</label>
    <type>Text</type>
</CustomField>