force-app/main/default/objects/Opportunity/fields/Titular_del_grupo_familiar_anterior__c.field-meta.xml
<CustomField>
    <fullName>Titular_del_grupo_familiar_anterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titular del grupo familiar anterior</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Cuenta_personal__r.Type</field>
            <operation>equals</operation>
            <value>Titular</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>