force-app/main/default/objects/Opportunity/fields/Usuario_error__c.field-meta.xml
<CustomField>
    <fullName>Usuario_error__c</fullName>
    <label>Usuario error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>