force-app/main/default/objects/Opportunity/fields/Voluntario_por_empresa__c.field-meta.xml
<CustomField>
    <fullName>Voluntario_por_empresa__c</fullName>
    <description>Este check se utiliza para convertir los valores del campo segmento en &quot;Check&quot; que se utilizan en las plantillas de la integracion de Docusign. NO BORRAR, NO MODIFICAR</description>
    <formula>ISPICKVAL( Segmento_del_Grupo_Familiar__c,&quot;VOLEMP&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voluntario por empresa</label>
    <type>Checkbox</type>
</CustomField>