force-app/main/default/objects/Opportunity/fields/X90_dias_sin_abrir__c.field-meta.xml
<CustomField>
    <fullName>X90_dias_sin_abrir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>90 dias sin abrir</label>
    <type>Checkbox</type>
</CustomField>