force-app/main/default/objects/Opportunity/fields/Zona_geografica__c.field-meta.xml
<CustomField>
    <fullName>Zona_geografica__c</fullName>
    <label>Zona geográfica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>