force-app/main/default/objects/Opportunity/recordTypes/Corporativo.recordType-meta.xml
<RecordType>
    <fullName>Corporativo</fullName>
    <active>true</active>
    <businessProcess>Venta Corporativa</businessProcess>
    <description>Tipo de registro exclusivo para ventas corporativas</description>
    <label>Corporativo</label>
</RecordType>