force-app/main/default/objects/Opportunity/recordTypes/Individual_Corporativo.recordType-meta.xml
<RecordType>
    <fullName>Individual_Corporativo</fullName>
    <active>true</active>
    <businessProcess>Individual Corporativo</businessProcess>
    <description>Tipo de registro exclusivo para detalle de Individual Corporativas</description>
    <label>Individual Corporativo</label>
</RecordType>