force-app/main/default/objects/Opportunity/recordTypes/Individuos.recordType-meta.xml
<RecordType>
    <fullName>Individuos</fullName>
    <active>true</active>
    <businessProcess>Venta Individual</businessProcess>
    <description>Tipo de registro para ventas individuales</description>
    <label>Individuos</label>
</RecordType>