force-app/main/default/objects/Opportunity/validationRules/Bloquear_Registro_Opp_Cerrada.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_Registro_Opp_Cerrada</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
       ISPICKVAL(PRIORVALUE(StageName), &quot;Cerrada ganada&quot;),
       ISPICKVAL(PRIORVALUE(StageName), &quot;Cerrada perdida&quot;)
       ),
    OR(
       ISPICKVAL(StageName, &quot;Cerrada ganada&quot;),
       ISPICKVAL(StageName, &quot;Cerrada perdida&quot;)
       )
   )</errorConditionFormula>
    <errorMessage>No se puede modificar el registro porque la etapa es &quot;Cerrada Ganada&quot;</errorMessage>
</ValidationRule>