force-app/main/default/objects/Opportunity/validationRules/Cbu_solo_numeros.validationRule-meta.xml
<ValidationRule>
    <fullName>Cbu_solo_numeros</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Individuos&quot;,
    NOT(ISNUMBER (   Nro_CBU_para_cobro_de_cuota__c   )),
    NOT(ISBLANK(Nro_CBU_para_cobro_de_cuota__c))
)</errorConditionFormula>
    <errorDisplayField>Nro_CBU_para_cobro_de_cuota__c</errorDisplayField>
    <errorMessage>Ingrese número únicamente.</errorMessage>
</ValidationRule>