force-app/main/default/objects/Opportunity/validationRules/Completar_CBU.validationRule-meta.xml
<ValidationRule>
    <fullName>Completar_CBU</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Medio_de_cobro__c, &apos;CBU&apos;),
				OR(
				    ISBLANK(Nro_CBU_para_cobro_de_cuota__c),
        ISBLANK(TEXT(Tipo_CBU__c))
				)
)</errorConditionFormula>
    <errorMessage>El Nro. CBU para cobro de cuota y Tipo CBU deben estar completos si el medio de cobro es &quot;CBU&quot;</errorMessage>
</ValidationRule>