force-app/main/default/objects/Opportunity/validationRules/Completar_CUIL_del_CBU.validationRule-meta.xml
<ValidationRule>
    <fullName>Completar_CUIL_del_CBU</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Medio_de_cobro__c, &apos;CBU&apos;),
    ISBLANK(CUIL_del_CBU__c),
				NOT(ISPICKVAL(Estado_de_solicitud__c, &apos;Transformada&apos;))
)</errorConditionFormula>
    <errorDisplayField>CUIL_del_CBU__c</errorDisplayField>
    <errorMessage>El CUIL del CBU debe estar completo si el medio de cobro es &quot;CBU&quot;</errorMessage>
</ValidationRule>