force-app/main/default/objects/Opportunity/validationRules/Contactado_etapa_siguiente_cotizado.validationRule-meta.xml
<ValidationRule>
    <fullName>Contactado_etapa_siguiente_cotizado</fullName>
    <active>true</active>
    <description>Cuando la etapa anterior sea Contactado, la etapa siguiente deberá ser obligatoriamente Cotizado.</description>
    <errorConditionFormula>AND(
        NOT(ISNEW()),
        RecordType.Name = &quot;Individuos&quot;,
        NOT(Sin_cotizacion__c),
        ISPICKVAL(PRIORVALUE(StageName), &quot;Contactado&quot;),
        NOT(ISPICKVAL(StageName, &quot;Contactado&quot;)),
        NOT(ISPICKVAL(StageName, &quot;Cotizado&quot;))
)</errorConditionFormula>
    <errorMessage>Luego de etapa Contactado, debe pasar a etapa Cotizado</errorMessage>
</ValidationRule>