force-app/main/default/objects/Opportunity/validationRules/COR_Cambiar_a_Cerrada.validationRule-meta.xml
<ValidationRule>
    <fullName>COR_Cambiar_a_Cerrada</fullName>
    <active>false</active>
    <description>No se podrá cambiar a la etapa de una oportunidad a Cerrada, a ningún usuario que no sea Jefe Canal Empresa y que, además, el futuro asociado no tenga oportunidades abiertas</description>
    <errorConditionFormula>AND(
    OR
				  (
				   RecordType.Name =&quot;Corporativo&quot;,
				   RecordType.Name =&quot;Individual Corporativo&quot;
				   ),
    OR(
       ISPICKVAL(StageName, &quot;Cerrada Perdida&quot;),
       ISPICKVAL(StageName, &quot;Cerrada Ganada&quot;)
      ),
   $Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;
)</errorConditionFormula>
    <errorMessage>No puede modificar una oportunidad a las etapas Cerrada Perdida o Cerrada Ganada. Este proceso se realiza de manera automática.</errorMessage>
</ValidationRule>