force-app/main/default/objects/Opportunity/validationRules/COR_Cerrada_cambiar_etapa.validationRule-meta.xml
<ValidationRule>
    <fullName>COR_Cerrada_cambiar_etapa</fullName>
    <active>true</active>
    <description>No se podrá cambiar la etapa de una oportunidad que ya está cerrada, a ningún usuario que no sea Organizador o superior y que, además, el futuro asociado no tenga oportunidades abiertas</description>
    <errorConditionFormula>AND(
    RecordType.Name =&quot;Corporativo&quot;,
    OR(
       ISPICKVAL(  PRIORVALUE(StageName), &quot;Cerrada Perdida&quot;),
       ISPICKVAL( PRIORVALUE(StageName) , &quot;Cerrada Ganada&quot;)
      ),
   
   $UserRole.Name &lt;&gt; &quot;Jefe Canal Empresa&quot;
)</errorConditionFormula>
    <errorMessage>No puede modificar una oportunidad cuando se encuentre en Cerrada Perdida o Cerrada Ganada</errorMessage>
</ValidationRule>