force-app/main/default/objects/Opportunity/validationRules/COR_Etapa_Contrato_Generado.validationRule-meta.xml
<ValidationRule>
    <fullName>COR_Etapa_Contrato_Generado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
       RecordType.Name =&quot;Corporativo&quot;,
       ISPICKVAL(StageName, &quot;Contrato Generado&quot;),
       ISBLANK(Cotizacion_Corporativa_elegida__c),
       OR(
            ISBLANK(Calle__c),
            ISBLANK(Numero__c)
            )
)</errorConditionFormula>
    <errorMessage>Para pasar a etapa Contrato generado debe completar los campos: Cotización elegida, Calle y Número.</errorMessage>
</ValidationRule>