force-app/main/default/objects/Opportunity/validationRules/COR_Indicar_motivo_de_perdida_y_comp.validationRule-meta.xml
<ValidationRule>
    <fullName>COR_Indicar_motivo_de_perdida_y_comp</fullName>
    <active>true</active>
    <description>Deberá indicar un valor, en el campo picklist &quot;Motivo de pérdida&quot; y &quot;Competidor&quot; cuando pase a etapa Cerrada Perdida.</description>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;Corporativo&quot;,
    ISPICKVAL(StageName, &quot;Cerrada Perdida&quot;),
    OR(
       ISBLANK(TEXT( Motivo_de_perdida__c )),
       ISBLANK(Competidor__c  )
      )
)</errorConditionFormula>
    <errorMessage>Debe indicar un motivo de pérdida y un competidor</errorMessage>
</ValidationRule>