force-app/main/default/objects/Opportunity/validationRules/COR_Recordar_Llamada.validationRule-meta.xml
<ValidationRule>
    <fullName>COR_Recordar_Llamada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        RecordType.Name = &quot;Corporativo&quot;,
        ISPICKVAL((StageName), &quot;Cotizado&quot;),
        ISBLANK (TEXT(Recordar_Llamada__c))
)</errorConditionFormula>
    <errorDisplayField>Recordar_Llamada__c</errorDisplayField>
    <errorMessage>Debe completar el campo recordar llamada</errorMessage>
</ValidationRule>