force-app/main/default/objects/Opportunity/validationRules/FRONT_motivo_de_cierre.validationRule-meta.xml
<ValidationRule>
    <fullName>FRONT_motivo_de_cierre</fullName>
    <active>true</active>
    <description>Para cerrar debe ser obligatorio el motivo de cierre</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Individuos&quot;,
$Profile.Name = &quot;Front&quot;,
ISPICKVAL(StageName, &quot;Cerrada Perdida&quot;),
ISBLANK(TEXT( Motivo_de_cierre_front__c  ))
)</errorConditionFormula>
    <errorMessage>Para cerrar la oportunidad debe ser obligatorio el motivo de cierre</errorMessage>
</ValidationRule>