force-app/main/default/objects/Opportunity/validationRules/IND_Afiliacion_inmediata.validationRule-meta.xml
<ValidationRule>
    <fullName>IND_Afiliacion_inmediata</fullName>
    <active>true</active>
    <description>Cuando es el campo plan de grupo familiar as200 o as204 Valores de pick list (AS500,	AS400,AS300), medio de cobro cbu o tarjeta (Otros), segmento del grupo voldir (OBLEMP, VOLEMP,OBLDIR),tipo de solicitud nuevo (REINGRESO, REING_GFAM) - Modif. JiraDES5765</description>
    <errorConditionFormula>AND( 
      OR(
            ISPICKVAL(Plan_del_grupo_familiar__c, &quot;AS500&quot;),
            ISPICKVAL(Plan_del_grupo_familiar__c, &quot;AS400&quot;),
            ISPICKVAL(Plan_del_grupo_familiar__c, &quot;AS300&quot;),
            ISPICKVAL(Segmento_del_Grupo_Familiar__c, &quot;OBLEMP&quot;),
            ISPICKVAL(Segmento_del_Grupo_Familiar__c, &quot;VOLEMP&quot;),
            ISPICKVAL(Segmento_del_Grupo_Familiar__c, &quot;OBLDIR&quot;),
            ISPICKVAL(Tipo_de_Solicitud__c, &quot;REINGRESO&quot;),
            ISPICKVAL(Medio_de_cobro__c, &quot;Otros&quot;),
            ISPICKVAL(Tipo_de_Solicitud__c, &quot;REING_GFAM&quot;)
            ),
           Indicador_de_Afiliacion_de_Inmediata__c = True
)</errorConditionFormula>
    <errorDisplayField>Indicador_de_Afiliacion_de_Inmediata__c</errorDisplayField>
    <errorMessage>No se le permite Afiliación inmediata para ese Plan de grupo familiar, Segmento de grupo familiar, medio de cobro</errorMessage>
</ValidationRule>