force-app/main/default/objects/Opportunity/validationRules/IND_Cambio_SubEstadoDDJJ_AUDITORIA.validationRule-meta.xml
<ValidationRule>
    <fullName>IND_Cambio_SubEstadoDDJJ_AUDITORIA</fullName>
    <active>false</active>
    <description>Si la funcion es comercial, el subestado DDJJ es pedido de estudio solo podra seleccionar Auditoria</description>
    <errorConditionFormula>AND(
NOT (ISNEW() ),
 $Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
               OR(
                      $UserRole.Name = &quot;Org. AMBA&quot;,

$UserRole.Name = &quot;Org. Buenos Aires Centro&quot;,

$UserRole.Name = &quot;Org. Buenos Aires Sur&quot;,

$UserRole.Name = &quot;Org. Patagonia Andina&quot;,

$UserRole.Name = &quot;Org. Buenos Aires Norte&quot;,

$UserRole.Name = &quot;Org. Pampeana&quot;,

$UserRole.Name = &quot;Org. Rosario&quot;,

$UserRole.Name = &quot;Org. Núcleo&quot;,

$UserRole.Name = &quot;Org. Córdoba Norte&quot;,

$UserRole.Name = &quot;Org. NEA&quot;,

$UserRole.Name = &quot;Org. NOA&quot;,

$UserRole.Name = &quot;Org. Córdoba Sur&quot;,

$UserRole.Name = &quot;Org. Santa Fe Centro&quot;,

$UserRole.Name = &quot;Org. Litoral&quot;,

$UserRole.Name = &quot;Org. Buenos Aires Costa Atlántica&quot;,

$UserRole.Name = &quot;Org. Patagonia Costa Atlántica&quot;,


$UserRole.Name = &quot;Supervisor AMBA&quot;,

$UserRole.Name = &quot;Supervisor Buenos Aires Centro&quot;,

$UserRole.Name = &quot;Supervisor Buenos Aires Sur&quot;,

$UserRole.Name = &quot;Supervisor Patagonia Andina&quot;,

$UserRole.Name = &quot;Supervisor Buenos Aires Norte&quot;,

$UserRole.Name = &quot;Supervisor Pampeana&quot;,

$UserRole.Name = &quot;Supervisor Rosario&quot;,

$UserRole.Name = &quot;Supervisor Núcleo&quot;,

$UserRole.Name = &quot;SupervisorCórdoba Norte&quot;,

$UserRole.Name = &quot;Supervisor NEA&quot;,

$UserRole.Name = &quot;Supervisor NOA&quot;,

$UserRole.Name = &quot;Supervisor Córdoba Sur&quot;,

$UserRole.Name = &quot;Supervisor Santa Fe Centro&quot;,

$UserRole.Name = &quot;Supervisor Litoral&quot;,

$UserRole.Name = &quot;Supervisor Buenos Aires Costa Atlántica&quot;,

$UserRole.Name = &quot;Supervisor Patagonia Costa Atlántica&quot;,

AND(
TEXT(Subestado_de_DDJJ__c) &lt;&gt; &quot;AUDITORIA&quot;,
TEXT(Subestado_de_DDJJ__c) &lt;&gt; &quot;TRASPASO&quot;
   )         
 )
)</errorConditionFormula>
    <errorDisplayField>Subestado_de_DDJJ__c</errorDisplayField>
    <errorMessage>Su perfil solo puede pasar de NUEVO/PEDIDO DE ESTUDIO a AUDITORIA</errorMessage>
</ValidationRule>