force-app/main/default/objects/Opportunity/validationRules/IND_Cambio_SubEstadoDDJJ_Comer.validationRule-meta.xml
<ValidationRule>
    <fullName>IND_Cambio_SubEstadoDDJJ_Comer</fullName>
    <active>false</active>
    <description>Si la funcion es comercial, el subestado DDJJ solo puede usar 2 valores pedido de estudio y auditoria</description>
    <errorConditionFormula>AND(
       NOT( ISNEW() ),
               OR(
                      $UserRole.Name = &quot;Comercial AMBA&quot;,
                      $UserRole.Name = &quot;Comercial Buenos Aires Centro&quot;,
                      $UserRole.Name = &quot;Comercial Buenos Aires Sur&quot;,
                      $UserRole.Name = &quot;Comercial Patagonia Andina&quot;,
                      $UserRole.Name = &quot;Comercial Buenos Aires Norte&quot;,
                      $UserRole.Name = &quot;Comercial Pampeana&quot;,
                      $UserRole.Name = &quot;Comercial Rosario&quot;,
                      $UserRole.Name = &quot;Comercial Núcleo&quot;,
                      $UserRole.Name = &quot;Comercial Córdoba Norte&quot;,
                      $UserRole.Name = &quot;Comercial NEA&quot;,
                      $UserRole.Name = &quot;Comercial NOA&quot;,
                      $UserRole.Name = &quot;Comercial Córdoba Sur&quot;,
                      $UserRole.Name = &quot;Comercial Santa Fe Centro&quot;,
                      $UserRole.Name = &quot;Comercial Litoral&quot;,
                      $UserRole.Name = &quot;Comercial Buenos Aires Costa Atlántica&quot;,
                      $UserRole.Name = &quot;Comercial Patagonia Costa Atlántica&quot;
                  ),
      
    TEXT(Subestado_de_DDJJ__c) &lt;&gt; &quot;AUDITORIA&quot;
 )</errorConditionFormula>
    <errorDisplayField>Subestado_de_DDJJ__c</errorDisplayField>
    <errorMessage>Acción no permitida para su función. Valores permitidos &quot;Pedido de estudio&quot; o &quot;Auditoria&quot;</errorMessage>
</ValidationRule>